--- a/notebooks/day7_LangGraph_Function_Callings.ipynb
+++ b/notebooks/day7_LangGraph_Function_Callings.ipynb
@@ -18,9 +18,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 🥱 LangGraph 深入理解工具呼叫（Tool Calling）\n",
+        "# 🥱 LangGraph 深入理解工具呼叫（Function Calling）\n",
         "\n",
-        "在人工智慧和自然語言處理的領域中，工具呼叫（Tool Calling）是一項革命性的技術。它賦予了大型語言模型（LLM）與外部資源互動的能力，大幅擴展了 AI 系統的功能範疇。本文將深入探討 LangGraph 框架中的工具呼叫機制，為您揭示其運作原理和實際應用。\n",
+        "在人工智慧和自然語言處理的領域中，工具呼叫（Function Calling）是一項革命性的技術。它賦予了大型語言模型（LLM）與外部資源互動的能力，大幅擴展了 AI 系統的功能範疇。本文將深入探討 LangGraph 框架中的工具呼叫機制，為您揭示其運作原理和實際應用。\n",
         "\n",
         "\n",
         "❤️ Created by [hengshiousheu](https://huggingface.co/Heng666).\n"
@@ -88,7 +88,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ab57b692-61a8-48d5-d802-510b3ff84801"
+        "outputId": "0b5d5643-efcb-4da3-c5c2-3c0086d7ef65"
       },
       "execution_count": null,
       "outputs": [
@@ -97,7 +97,7 @@
           "name": "stdout",
           "text": [
             "Name: langgraph\n",
-            "Version: 0.2.10\n",
+            "Version: 0.2.15\n",
             "Summary: Building stateful, multi-actor applications with LLMs\n",
             "Home-page: https://www.github.com/langchain-ai/langgraph\n",
             "Author: \n",
@@ -122,7 +122,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 1.何謂工具呼叫 Tool Calling ?\n",
+        "# 1.何謂工具呼叫 Function Calling ?\n",
         "\n",
         "工具呼叫允許大型語言模型（LLM）在生成對話過程中與外部工具互動。這意味著 LLM 可以存取超出其知識庫範圍的資訊或執行相應操作。工具可以是開發者編寫的函式、外部服務的 API，或任何 LLM 可以互動的資源。這項技術大大擴展了 LLM 的能力，使其不再侷限於訓練時獲得的靜態知識，而能夠動態地獲取資訊或執行特定任務。\n",
         "\n",
@@ -150,7 +150,7 @@
       "source": [
         "## 1.2 工具呼叫的實際應用範例\n",
         "\n",
-        "讓我們通過一個簡單的天氣查詢工具來展現 Tool calling 的實現過程："
+        "讓我們通過一個簡單的天氣查詢工具來展現 Function calling 的實現過程："
       ],
       "metadata": {
         "id": "_BS9DGmXmjpn"
@@ -159,6 +159,15 @@
     {
       "cell_type": "code",
       "source": [
+        "from langchain_core.tools import tool\n",
+        "from typing import Optional\n",
+        "from langchain_core.messages import AIMessage\n",
+        "from langchain_core.tools import tool\n",
+        "from langgraph.prebuilt import ToolNode\n",
+        "from langchain_openai import ChatOpenAI\n",
+        "from langgraph.graph import END, MessagesState, StateGraph\n",
+        "from typing import Literal\n",
+        "\n",
         "@tool\n",
         "def query_taiwan_weather(city: str, date: Optional[str] = None) -> str:\n",
         "    \"\"\"\n",
@@ -181,10 +190,25 @@
         "response = llm_with_weather.invoke(\"請告訴我台北明天的天氣如何？\")"
       ],
       "metadata": {
-        "id": "ttQ3wWBZmtpj"
+        "id": "ttQ3wWBZmtpj",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "37dc0a39-d008-442d-93ab-973aea6d9dce"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "AIMessage(content='', additional_kwargs={'tool_calls': [{'id': 'call_vvtcALECQrfWPIiORXe1CWSy', 'function': {'arguments': '{\"city\":\"台北\",\"date\":\"2022-12-29\"}', 'name': 'query_taiwan_weather'}, 'type': 'function'}], 'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 27, 'prompt_tokens': 187, 'total_tokens': 214}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'tool_calls', 'logprobs': None}, id='run-d9a8e1b8-219c-40bc-a4ca-557daa2b4c96-0', tool_calls=[{'name': 'query_taiwan_weather', 'args': {'city': '台北', 'date': '2022-12-29'}, 'id': 'call_vvtcALECQrfWPIiORXe1CWSy', 'type': 'tool_call'}], usage_metadata={'input_tokens': 187, 'output_tokens': 27, 'total_tokens': 214})"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -589,7 +613,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 4.如何處理 Tool CAlling 發生錯誤時？\n",
+        "# 4.如何處理 Function Calling 發生錯誤時？\n",
         "\n",
         "在構建基於大型語言模型(LLMs)的 AI 系統時,我們經常會遇到一個關鍵挑戰：LLM 在調用工具時並不總是完美的。本文將深入探討這個問題,並提供一些實用的策略來增強系統的魯棒性。\n"
       ],
